test/tests/errors/error-file-get-end-of-file.sm
// true
// false
/**/
/**/

program{
    file f withbuffer bf;
    get f;
}